--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<link rel="stylesheet" href="css/bootsnav.css">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/responsive.css" />
+		<link rel="stylesheet" href="css/general.css" />
 		<!--[if IE]>
 					<script src="js/html5shiv.js"></script>
 		<![endif]-->
@@ -60,6 +61,25 @@
 				</div>
 			</div>
 		</section>
+		<!-- start countdown section -->
+		<section class="extra-big-section wow fadeIn padding-50px-tb">
+			<div class="container position-relative">
+				<div class="row">
+					<div class="col-md-10 col-sm-12 center-col last-paragraph-no-margin">
+						<h1 class="text-extra-dark-gray alt-font font-weight-title">Time Until Next Update</h1>
+						
+					</div>
+				</div>
+				<div class="row">
+					<!-- start timer -->
+					<div class="col-md-12 col-sm-12 center-col">
+						<div data-enddate="2018/11/01 09:05:00" class="countdown text-center text-extra-dark-gray counter-box-5"></div>
+					</div>
+					<!-- end timer -->
+				</div> 
+			</div>
+		</section>
+		<!-- end countdown section -->
 		<!-- End Title Section -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/modernizr.js"></script>
