--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" href="css/responsive.css" />
 		<link rel="stylesheet" href="css/general.css" />
 		<!--[if IE]>
-					<script src="js/html5shiv.js"></script>
+			<script src="js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 	<body>
@@ -61,6 +61,31 @@
 				</div>
 			</div>
 		</section>
+		<!-- Start Characters Section -->
+		<section class="wow fadeIn paralax cover-background half-section" style="background-image: url('images/characters.jpeg');">
+			<div class="opacity-medium bg-extra-dark-gray"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 col-sm-12 center-col position-relative text-center">
+						<span class="text-extra-large text-white alt-font display-inline-block margin-5px-top margin-30px-right xs-no-margin-right xs-no-margin-top xs-margin-15px-bottom xs-width-100">Sixteen diverse characters</span>
+						<a href="characters" class="btn btn-white btn-small bth-rounded vertical-align-top xs-no-margin-right">Veiw Characters</a>
+					</div>					
+				</div>
+			</div>
+		</section>
+		<!-- End Characters Section -->
+		<!-- Start Weapons Section -->
+		<section class="wow fadeIn">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 center-col text-center">
+						<h5 class="alt-font text-uppercase font-weight-600 text-extra-dark-gray width-80 center-col margin-35px-bottom md-width-100 wow fadeInUp">237 Weapons</h5>
+						<a href="#" class="btn btn-medium btn-rounded btn-transparent-dark-gray wow fadeInUp" data-wow-delay="0.2s">Veiw Weapons List<i class="ti-arrow-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Weapons Section -->
 		<!-- start countdown section -->
 		<section class="extra-big-section wow fadeIn padding-50px-tb">
 			<div class="container position-relative">
