--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 		<meta name="description" content="Nerds making theatre stuff">
 		<meta name="keywords" content="theater, theatre, basis, basis ahwatukee, extracurricular">
-		<script src="/cdn-cgi/apps/head/_fbHNTh7NzToxa7Mg_A0fMkxYEI.js"></script><link rel="shortcut icon" href="brand/favicon.png">
 		<link rel="apple-touch-icon" href="brand/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="brand/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="brand/apple-touch-icon-114x114.png">
@@ -79,8 +78,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 center-col text-center">
-						<h5 class="alt-font text-uppercase font-weight-600 text-extra-dark-gray width-80 center-col margin-35px-bottom md-width-100 wow fadeInUp">237 Weapons</h5>
-						<a href="#" class="btn btn-medium btn-rounded btn-transparent-dark-gray wow fadeInUp" data-wow-delay="0.2s">Veiw Weapons List<i class="ti-arrow-right"></i></a>
+						<h5 class="alt-font text-uppercase font-weight-title text-extra-dark-gray width-80 center-col margin-35px-bottom md-width-100 wow fadeInUp">237 Weapons</h5>
+						<a href="weapons" class="btn btn-medium btn-rounded btn-transparent-dark-gray wow fadeInUp" data-wow-delay="0.2s">Veiw Weapons List<i class="ti-arrow-right"></i></a>
 					</div>
 				</div>
 			</div>
@@ -92,7 +91,6 @@
 				<div class="row">
 					<div class="col-md-10 col-sm-12 center-col last-paragraph-no-margin">
 						<h1 class="text-extra-dark-gray alt-font font-weight-title">Time Until Next Update</h1>
-						
 					</div>
 				</div>
 				<div class="row">
