--- a/index.html
+++ b/index.html
@@ -85,6 +85,53 @@
 			</div>
 		</section>
 		<!-- End Weapons Section -->
+		<!-- Start Block Things -->
+		<section class="wow fadeIn padding-100px-tb">
+			<div class="container">
+				<div class="row">
+					<!-- counter box item -->
+					<div class="col-md-3 col-sm-6 col-xs-12 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-seven-bottom wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
+						<i class="icon-happy icon-medium pull-left text-medium-gray"></i>
+						<div class="pull-left padding-nine-left">
+							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="650">650</h5>
+							<span class="text-small text-medium-gray text-uppercase display-block">Happy Clients</span>
+							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
+						</div>
+					</div>
+					<!-- end counter box item -->
+					<!-- counter box item -->
+					<div class="col-md-3 col-sm-6 col-xs-12 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-seven-bottom wow fadeInDown" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">
+						<i class="icon-layers icon-medium pull-left text-medium-gray"></i>
+						<div class="pull-left padding-nine-left">
+							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="987">987</h5>
+							<span class="text-small text-medium-gray text-uppercase display-block">work Completed</span>
+							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
+						</div>
+					</div>
+					<!-- end counter box item -->
+					<!-- counter box item -->
+					<div class="col-md-3 col-sm-6 col-xs-12 xs-margin-seven-bottom sm-padding-ten-left xs-padding-15px-left wow fadeInDown" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInDown;">
+						<i class="icon-global icon-medium pull-left text-medium-gray"></i>
+						<div class="pull-left padding-nine-left">
+							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="350">350</h5>
+							<span class="text-small text-medium-gray text-uppercase display-block">Award Winning</span>
+							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
+						</div>
+					</div>
+					<!-- end counter box item -->
+					<!-- counter box item -->
+					<div class="col-md-3 col-sm-6 col-xs-12 xs-margin-seven-bottom sm-padding-ten-left xs-padding-15px-left wow fadeInDown" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInDown;">
+						<i class="icon-chat icon-medium pull-left text-medium-gray"></i>
+						<div class="pull-left padding-nine-left">
+							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="850">850</h5>
+							<span class="text-small text-medium-gray text-uppercase display-block">Telephonic Talk</span>
+							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
+						</div>
+					</div>
+					<!-- end counter box item -->
+				</div>
+			</div>
+		</section>
 		<!-- start countdown section -->
 		<section class="extra-big-section wow fadeIn padding-50px-tb">
 			<div class="container position-relative">
