--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html class="no-js" lang="en">
+<html>
 	<head>
 		<title>The First Decentralized Video Game</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-		<meta name="description" content="Nerds making theatre stuff">
-		<meta name="keywords" content="theater, theatre, basis, basis ahwatukee, extracurricular">
+		<meta name="description" content="The official website of the world's first decentralized video game.">
+		<meta name="keywords" content="video game, videogame, decentralized, blockchain">
 		<link rel="apple-touch-icon" href="brand/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="brand/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="brand/apple-touch-icon-114x114.png">
