--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 center-col position-relative text-center">
 						<span class="text-extra-large text-white alt-font display-inline-block margin-5px-top margin-30px-right xs-no-margin-right xs-no-margin-top xs-margin-15px-bottom xs-width-100">Sixteen diverse characters</span>
-						<a href="characters" class="btn btn-white btn-small bth-rounded vertical-align-top xs-no-margin-right">Veiw Characters</a>
+						<a href="characters" class="btn btn-transparent-white btn-small btn-rounded vertical-align-top xs-no-margin-right">Veiw Characters</a>
 					</div>					
 				</div>
 			</div>
