--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
 				</div>
 			</div>
 		</section>
+		<section class="no-padding bg-white" id="decentralized">
+			<div class="container-fluid">
+				<div class="row equalize sm-equalize-auto"> 
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 cover-background sm-height-400px wow fadeInLeft" style="background-image:url('images/decentralized.jpeg'); height: 100%;"></div>
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight no-padding-lr xs-padding-30px-tb sm-padding-15px-lr">
+						<div class="padding-eight-all pull-left md-padding-eight-all sm-no-padding-lr xs-padding-20px-tb">
+							<div class="col-2-nth">
+								<h4 class="text-extra-dark-gray alt-font margin-5px-bottom font-weight-700">Entirely Decentralized</h4>
+								<p class="text-medium text-medium-gray">There is no authority of any kind, updates are decided by the community.</p>
+							</div>
+						</div>
+					</div> 
+				</div>
+			</div>
+		</section>
 		<!-- Start Characters Section -->
 		<section class="wow fadeIn paralax cover-background half-section" style="background-image: url('images/characters.jpeg');">
 			<div class="opacity-medium bg-extra-dark-gray"></div>
@@ -85,53 +100,6 @@
 			</div>
 		</section>
 		<!-- End Weapons Section -->
-		<!-- Start Block Things -->
-		<section class="wow fadeIn padding-100px-tb">
-			<div class="container">
-				<div class="row">
-					<!-- counter box item -->
-					<div class="col-md-3 col-sm-6 col-xs-12 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-seven-bottom wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
-						<i class="icon-happy icon-medium pull-left text-medium-gray"></i>
-						<div class="pull-left padding-nine-left">
-							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="650">650</h5>
-							<span class="text-small text-medium-gray text-uppercase display-block">Happy Clients</span>
-							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
-						</div>
-					</div>
-					<!-- end counter box item -->
-					<!-- counter box item -->
-					<div class="col-md-3 col-sm-6 col-xs-12 sm-margin-five-bottom sm-padding-ten-left xs-padding-15px-left xs-margin-seven-bottom wow fadeInDown" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">
-						<i class="icon-layers icon-medium pull-left text-medium-gray"></i>
-						<div class="pull-left padding-nine-left">
-							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="987">987</h5>
-							<span class="text-small text-medium-gray text-uppercase display-block">work Completed</span>
-							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
-						</div>
-					</div>
-					<!-- end counter box item -->
-					<!-- counter box item -->
-					<div class="col-md-3 col-sm-6 col-xs-12 xs-margin-seven-bottom sm-padding-ten-left xs-padding-15px-left wow fadeInDown" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInDown;">
-						<i class="icon-global icon-medium pull-left text-medium-gray"></i>
-						<div class="pull-left padding-nine-left">
-							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="350">350</h5>
-							<span class="text-small text-medium-gray text-uppercase display-block">Award Winning</span>
-							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
-						</div>
-					</div>
-					<!-- end counter box item -->
-					<!-- counter box item -->
-					<div class="col-md-3 col-sm-6 col-xs-12 xs-margin-seven-bottom sm-padding-ten-left xs-padding-15px-left wow fadeInDown" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInDown;">
-						<i class="icon-chat icon-medium pull-left text-medium-gray"></i>
-						<div class="pull-left padding-nine-left">
-							<h5 class="text-extra-dark-gray font-weight-300 margin-three-bottom timer appear" data-speed="2000" data-to="850">850</h5>
-							<span class="text-small text-medium-gray text-uppercase display-block">Telephonic Talk</span>
-							<div class="separator-line-horrizontal-medium-light2 bg-deep-pink display-inline-block"></div>
-						</div>
-					</div>
-					<!-- end counter box item -->
-				</div>
-			</div>
-		</section>
 		<!-- start countdown section -->
 		<section class="extra-big-section wow fadeIn padding-50px-tb">
 			<div class="container position-relative">
