--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</head>
 	<body>
 		<!-- Start Title Section -->
-		<section class="no-padding one-third-screen position-relative wow fadeIn">
+		<section class="no-padding one-third-screen position-relative wow paralax" style="background-image:url('images/stock-0.jpeg');">
 			<div class="opacity-medium bg-extra-dark-gray z-index-0"></div>
 			<div class="container">
 				<div class="row">
