--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="no-padding bg-white" id="decentralized">
+		<section class="no-padding bg-white" id="decentralized down-section">
 			<div class="container-fluid">
 				<div class="row equalize sm-equalize-auto"> 
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 cover-background sm-height-400px wow fadeInLeft" style="background-image:url('images/decentralized.jpeg'); height: 100%;"></div>
@@ -69,55 +69,14 @@
 							<div class="col-2-nth">
 								<h4 class="text-extra-dark-gray alt-font margin-5px-bottom font-weight-700">Entirely Decentralized</h4>
 								<p class="text-medium text-medium-gray">There is no authority of any kind, updates are decided by the community.</p>
+								<a href="characters" class="btn btn-transparent-extra-dark-gray btn-small btn-rounded vertical-align-top xs-no-margin-right">Veiw Block Explorer</a>
+
 							</div>
 						</div>
 					</div> 
 				</div>
 			</div>
 		</section>
-		<!-- Start Characters Section -->
-		<section class="wow fadeIn paralax cover-background half-section" style="background-image: url('images/characters.jpeg');">
-			<div class="opacity-medium bg-extra-dark-gray"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12 center-col position-relative text-center">
-						<span class="text-extra-large text-white alt-font display-inline-block margin-5px-top margin-30px-right xs-no-margin-right xs-no-margin-top xs-margin-15px-bottom xs-width-100">Sixteen diverse characters</span>
-						<a href="characters" class="btn btn-transparent-white btn-small btn-rounded vertical-align-top xs-no-margin-right">Veiw Characters</a>
-					</div>					
-				</div>
-			</div>
-		</section>
-		<!-- End Characters Section -->
-		<!-- Start Weapons Section -->
-		<section class="wow fadeIn">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 center-col text-center">
-						<h5 class="alt-font text-uppercase font-weight-title text-extra-dark-gray width-80 center-col margin-35px-bottom md-width-100 wow fadeInUp">237 Weapons</h5>
-						<a href="weapons" class="btn btn-medium btn-rounded btn-transparent-dark-gray wow fadeInUp" data-wow-delay="0.2s">Veiw Weapons List<i class="ti-arrow-right"></i></a>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Weapons Section -->
-		<!-- start countdown section -->
-		<section class="extra-big-section wow fadeIn padding-50px-tb">
-			<div class="container position-relative">
-				<div class="row">
-					<div class="col-md-10 col-sm-12 center-col last-paragraph-no-margin">
-						<h1 class="text-extra-dark-gray alt-font font-weight-title">Time Until Next Update</h1>
-					</div>
-				</div>
-				<div class="row">
-					<!-- start timer -->
-					<div class="col-md-12 col-sm-12 center-col">
-						<div data-enddate="2018/11/01 09:05:00" class="countdown text-center text-extra-dark-gray counter-box-5"></div>
-					</div>
-					<!-- end timer -->
-				</div> 
-			</div>
-		</section>
-		<!-- end countdown section -->
 		<!-- End Title Section -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/modernizr.js"></script>
