--- a/index.html
+++ b/index.html
@@ -30,36 +30,61 @@
 	</head>
 	<body>
 		<!-- Start Title Section -->
-		<section class="no-padding one-third-screen position-relative wow paralax" style="background-image:url('images/stock-0.jpeg');">
-			<div class="opacity-medium bg-extra-dark-gray z-index-0"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12 col-xs-12 display-table one-third-screen page-title-large">
-						<div class="display-table-cell vertical-align-middle text-center">
-							<!-- start sub title -->
-							<span class="display-block text-white opacity6 margin-10px-bottom alt-font">The World's First Decentralized Video Game</span>
-							<!-- end sub title -->
-							<!-- start page title -->
-							<h1 class="alt-font text-white font-weight-600 width-55 sm-width-80 xs-width-100 center-col no-margin-bottom">IDK, It doesn't have a name right now...</h1>
-							<!-- end page title -->
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="swiper-auto-fade swiper-container z-index-minus2 position-absolute top-0 width-100 height-100">
+		<section class="no-padding main-slider height-100 mobile-height wow fadeIn ">
+			<div class="swiper-full-screen swiper-container height-100 width-100 black-move">
 				<div class="swiper-wrapper">
 					<!-- start slider item -->
-					<div class="swiper-slide cover-background one-third-screen" style="background-image:url('images/homepage-1.jpeg');"></div>
+					<div class="swiper-slide cover-background" style="background-image:url('images/decentralized.jepg');">
+						<div class="container position-relative full-screen">
+							<div class="col-md-12 slider-typography text-left xs-text-center">
+								<div class="slider-text-middle-main">
+									<div class="slider-text-middle">
+										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">World's First Decentralized Video Game</h1>
+										<p class="text-extra-dark-gray text-large margin-four-bottom width-40 md-width-50 sm-width-60 xs-width-100 xs-margin-15px-bottom">No central authority, not even with updates</p>
+										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="about" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!-- end slider item -->
 					<!-- start slider item -->
-					<div class="swiper-slide cover-background one-third-screen" style="background-image:url('images/homepage-2.jpeg');"></div>
+					<div class="swiper-slide cover-background" style="background-image:url('images/characters.jpeg');">
+						<div class="container position-relative full-screen">
+							<div class="col-md-12 slider-typography text-left xs-text-center">
+								<div class="slider-text-middle-main">
+									<div class="slider-text-middle">
+										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">Sixteen Diverse Characters</h1>
+										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="characters" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!-- end slider item -->
 					<!-- start slider item -->
-					<div class="swiper-slide cover-background one-third-screen" style="background-image:url('images/homepage-3.jpeg');"></div>
+					<div class="swiper-slide cover-background" style="background-image:url('images/weapons.jpeg');">
+						<div class="container position-relative full-screen">
+							<div class="col-md-12 slider-typography text-left xs-text-center">
+								<div class="slider-text-middle-main">
+									<div class="slider-text-middle">
+										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">Hundreds of Carefully Designed Weapons</h1>
+										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="weapons" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<!-- end slider item -->
 				</div>
+				<!-- start slider pagination -->
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-next swiper-button-black-highlight display-none"></div>
+				<div class="swiper-button-prev swiper-button-black-highlight display-none"></div>
+				<!-- end slider pagination -->
 			</div>
 		</section>
+		<!-- end Title section --> 
 		<section class="no-padding bg-white" id="decentralized down-section">
 			<div class="container-fluid">
 				<div class="row equalize sm-equalize-auto"> 
@@ -69,7 +94,8 @@
 							<div class="col-2-nth">
 								<h4 class="text-extra-dark-gray alt-font margin-5px-bottom font-weight-700">Entirely Decentralized</h4>
 								<p class="text-medium text-medium-gray">There is no authority of any kind, updates are decided by the community.</p>
-								<a href="characters" class="btn btn-transparent-dark-gray btn-small btn-rounded vertical-align-top xs-no-margin-right">Veiw Block Explorer</a>
+								<p class="text-medium text-medium-gray">Updates work by a non-partisan voting system tied to blocks.</p>
+								<a href="characters" class="btn btn-transparent-dark-gray btn-very-small btn-rounded vertical-align-top xs-no-margin-right">Veiw Block Explorer</a>
 
 							</div>
 						</div>
