--- a/index.html
+++ b/index.html
@@ -30,59 +30,19 @@
 	</head>
 	<body>
 		<!-- Start Title Section -->
-		<section class="no-padding main-slider height-100 mobile-height wow fadeIn ">
-			<div class="swiper-full-screen swiper-container height-100 width-100 black-move">
-				<div class="swiper-wrapper">
-					<!-- start slider item -->
-					<div class="swiper-slide cover-background" style="background-image:url('images/decentralized.jepg');">
-						<div class="container position-relative full-screen">
-							<div class="col-md-12 slider-typography text-left xs-text-center">
-								<div class="slider-text-middle-main">
-									<div class="slider-text-middle">
-										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">World's First Decentralized Video Game</h1>
-										<p class="text-extra-dark-gray text-large margin-four-bottom width-40 md-width-50 sm-width-60 xs-width-100 xs-margin-15px-bottom">No central authority, not even with updates</p>
-										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="about" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
-									</div>
-								</div>
-							</div>
+		<section id="home" class="no-padding parallax mobile-height wow fadeIn" data-stellar-background-ratio="0.5" style="background-image:url('images/cover-0.jpeg');">
+			<div class="opacity-extra-medium bg-extra-dark-gray"></div>
+			<div class="container position-relative full-screen xs-height-400px">
+				<div class="slider-typography text-center">
+					<div class="slider-text-middle-main">
+						<div class="slider-text-middle">
+							<h1 class="alt-font text-white font-weight-700 width-75 xs-width-95 center-col margin-35px-bottom xs-margin-15px-bottom">Crafting Digital Experiences</h1>
+							<div class="btn-dual"><a href="download" class="btn btn-white btn-rounded btn-medium xs-margin-two-all">Learn More</a><a href="about" class="btn btn-white btn-rounded btn-medium xs-margin-two-all">Learn More</a></div>
 						</div>
 					</div>
-					<!-- end slider item -->
-					<!-- start slider item -->
-					<div class="swiper-slide cover-background" style="background-image:url('images/characters.jpeg');">
-						<div class="container position-relative full-screen">
-							<div class="col-md-12 slider-typography text-left xs-text-center">
-								<div class="slider-text-middle-main">
-									<div class="slider-text-middle">
-										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">Sixteen Diverse Characters</h1>
-										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="characters" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end slider item -->
-					<!-- start slider item -->
-					<div class="swiper-slide cover-background" style="background-image:url('images/weapons.jpeg');">
-						<div class="container position-relative full-screen">
-							<div class="col-md-12 slider-typography text-left xs-text-center">
-								<div class="slider-text-middle-main">
-									<div class="slider-text-middle">
-										<h1 class="alt-font text-extra-dark-gray font-weight-700 letter-spacing-minus-1 line-height-80 width-55 margin-35px-bottom md-width-60 sm-width-70 md-line-height-auto xs-width-100 xs-margin-15px-bottom">Hundreds of Carefully Designed Weapons</h1>
-										<div class="btn-dual"><a href="download" target="_blank" class="btn btn-dark-gray btn-rounded btn-small no-margin-lr">Download</a><a href="weapons" target="_blank" class="btn btn-transparent-dark-gray btn-rounded btn-small margin-20px-lr xs-margin-5px-top">Learn More</a></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end slider item -->
 				</div>
-				<!-- start slider pagination -->
-				<div class="swiper-pagination"></div>
-				<div class="swiper-button-next swiper-button-black-highlight display-none"></div>
-				<div class="swiper-button-prev swiper-button-black-highlight display-none"></div>
-				<!-- end slider pagination -->
 			</div>
+			<div class="down-section text-center"><a href="#start" class="inner-link"><i class="ti-arrow-down icon-small text-white padding-15px-all xs-padding-10px-all border-radius-100"></i></a></div>
 		</section>
 		<!-- end Title section --> 
 		<section class="no-padding bg-white" id="decentralized down-section">
