--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="slider-typography text-center">
 					<div class="slider-text-middle-main">
 						<div class="slider-text-middle">
-							<h1 class="alt-font text-white font-weight-700 width-75 xs-width-95 center-col margin-35px-bottom xs-margin-15px-bottom">Crafting Digital Experiences</h1>
+							<h1 class="alt-font text-white font-weight-700 width-75 xs-width-95 center-col margin-35px-bottom xs-margin-15px-bottom">World's First Decentralized Video Game</h1>
 							<div class="btn-dual"><a href="download" class="btn btn-white btn-rounded btn-medium xs-margin-two-all">Learn More</a><a href="about" class="btn btn-white btn-rounded btn-medium xs-margin-two-all">Learn More</a></div>
 						</div>
 					</div>
