--- a/address/example/index.html
+++ b/address/example/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<title>Ingrasel</title>
+		<title>!!l-address - Ingrasel</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 		<meta name="description" content="The official website of the world's first decentralized video game.">
-		<meta name="keywords" content="video game, videogame, decentralized, blockchain">
+		<meta name="keywords" content="video game, videogame, decentralized, blockchain, !!l-address">
 		<link rel="apple-touch-icon" href="../../brand/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="../../brand/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="../../brand/apple-touch-icon-114x114.png">
@@ -31,6 +31,23 @@
 	<body>
 		!!Header
 		<!-- Start Title Section -->
+		 <section class="wow fadeIn bg-light-gray padding-50px-tb xs-padding-30px-tb page-title-small">
+			<div class="container">
+				<div class="row equalize">
+					<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 display-table">
+						<div class="display-table-cell vertical-align-middle text-left xs-text-center">
+							<!-- start page title -->
+							<h1 class="alt-font title-extra-dark-gray title-extra-large font-weight-700 no-margin-bottom">Address</h1>
+							<!-- end page title -->
+							<!-- start sub title -->
+							<span class="display-block margin-5px-top alt-font">!!l-address</span>
+							<!-- end sub title -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end page title section -->
 		<!-- End Title Section -->
 		!!Footer
 		<script type="text/javascript" src="../../js/modernizr.js"></script>
