--- a/address/example/index.html
+++ b/address/example/index.html
@@ -37,7 +37,7 @@
 					<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 display-table">
 						<div class="display-table-cell vertical-align-middle text-left xs-text-center">
 							<!-- start page title -->
-							<h1 class="alt-font title-extra-dark-gray title-extra-large font-weight-700 no-margin-bottom">Address</h1>
+							<h1 class="text-extra-dark-gray alt-font font-weight-700">Address</h1>
 							<!-- end page title -->
 							<!-- start sub title -->
 							<span class="display-block margin-5px-top alt-font">!!l-address</span>
