--- a/address/example/index.html
+++ b/address/example/index.html
@@ -31,7 +31,7 @@
 	<body>
 		!!Header
 		<!-- Start Title Section -->
-		 <section class="wow fadeIn bg-light-gray padding-50px-tb xs-padding-30px-tb page-title-small">
+		 <section class="wow fadeIn bg-light-gray padding-50px-tb xs-padding-30px-tb page-title-very-large">
 			<div class="container">
 				<div class="row equalize">
 					<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 display-table">
