--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="down-section text-center"><a href="#start" class="inner-link"><i class="ti-arrow-down icon-small text-white padding-15px-all xs-padding-10px-all border-radius-100"></i></a></div>
 		</section>
 		<!-- end Title section --> 
-		<section class="no-padding bg-white" id="decentralized down-section">
+		<section class="no-padding bg-white" id="decentralized start">
 			<div class="container-fluid">
 				<div class="row equalize sm-equalize-auto"> 
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 cover-background sm-height-400px wow fadeInLeft" style="background-image:url('images/decentralized.jpeg'); height: 100%;"></div>
